--- a/app/src/main/res/layout/vets_item_list.xml
+++ b/app/src/main/res/layout/vets_item_list.xml
@@ -5,16 +5,16 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:background="#ACC5E1">
 
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
         android:focusable="true"
-        android:focusableInTouchMode="true">
+        android:focusableInTouchMode="true"
+        android:orientation="vertical">
 
         <LinearLayout
             android:id="@+id/linearLayoutToolbar"
@@ -78,7 +78,7 @@
             </LinearLayout>
 
             <TextView
-                android:id="@+id/textView3"
+                android:id="@+id/textViewAddress_vet"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="10dp"
@@ -103,7 +103,7 @@
                 android:textSize="24sp" />
 
             <TextView
-                android:id="@+id/textView6"
+                android:id="@+id/textViewPhone_vet"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="10dp"
@@ -157,7 +157,7 @@
             </LinearLayout>
 
             <TextView
-                android:id="@+id/textView7"
+                android:id="@+id/textViewNotes_vet"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="10dp"
@@ -168,7 +168,7 @@
                 android:textSize="16sp" />
 
             <EditText
-                android:id="@+id/editTextPeriodicity_med"
+                android:id="@+id/editTextNotes_vet"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="10dp"
@@ -220,9 +220,9 @@
                 android:orientation="vertical">
 
                 <com.example.rodentshelper.CustomListView
+                    android:id="@+id/ListViewVet"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:id="@+id/ListViewVet"
                     android:fillViewport="false"
                     android:overScrollMode="always" />
             </LinearLayout>
