--- a/app/src/main/res/layout/activity_start.xml
+++ b/app/src/main/res/layout/activity_start.xml
@@ -1,87 +1,126 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:background="#ACC5E1"
-    android:orientation="vertical">
-
+    android:orientation="vertical"
+    android:contentDescription="Activity - choose rodent">
 
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:layout_marginBottom="20dp"
         android:orientation="vertical">
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
-            android:text="Chomik" />
 
-        <ImageButton
-            android:id="@+id/imageButtonHamster"
+        <include
+            android:id="@+id/app_bar"
+            layout="@layout/app_bar_global"
             android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:layout_marginLeft="30dp"
-            android:layout_marginTop="5dp"
-            android:layout_marginRight="30dp"
-            android:contentDescription="Chomik"
-            tools:layout_editor_absoluteX="10dp"
-            tools:layout_editor_absoluteY="321dp"
-            tools:srcCompat="@android:drawable/alert_dark_frame" />
-    </LinearLayout>
+            android:layout_height="wrap_content" />
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="20dp"
-        android:orientation="vertical">
 
-        <TextView
+        <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
-            android:text="Szczur" />
+            android:layout_height="match_parent"
+            android:layout_marginStart="40dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginEnd="40dp"
+            android:layout_marginBottom="10dp"
+            android:elevation="10dp"
+            app:cardCornerRadius="8dp">
 
-        <ImageButton
-            android:id="@+id/imageButtonRat"
+            <ImageView
+                android:id="@+id/imageButtonGuineaPig"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:adjustViewBounds="true"
+                android:background="@drawable/rounded_image_view"
+                app:srcCompat="@drawable/rodent_icon1"
+                android:contentDescription="Guinea pig"/>
+        </androidx.cardview.widget.CardView>
+
+        <View
             android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:layout_marginLeft="30dp"
+            android:layout_height="5dp"
+            android:layout_marginLeft="10dp"
             android:layout_marginTop="10dp"
-            android:layout_marginRight="30dp"
-            android:contentDescription="Królik"
-            tools:layout_editor_absoluteX="10dp"
-            tools:layout_editor_absoluteY="321dp"
-            tools:srcCompat="@tools:sample/backgrounds/scenic" />
-    </LinearLayout>
+            android:layout_marginRight="10dp"
+            android:background="#5397DF" />
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
-
-        <TextView
+        <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
-            android:text="Szynszyla" />
+            android:layout_height="match_parent"
+            android:layout_marginStart="40dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginEnd="40dp"
+            android:layout_marginBottom="10dp"
+            android:elevation="10dp"
+            app:cardCornerRadius="8dp">
 
-        <ImageButton
-            android:id="@+id/imageButtonChinchilla"
+            <ImageView
+                android:id="@+id/imageButtonRat"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:adjustViewBounds="true"
+                app:srcCompat="@drawable/rodent_icon2"
+                android:contentDescription="Domestic rat"/>
+        </androidx.cardview.widget.CardView>
+
+        <View
             android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:layout_marginLeft="30dp"
+            android:layout_height="5dp"
+            android:layout_marginLeft="10dp"
             android:layout_marginTop="10dp"
-            android:layout_marginRight="30dp"
-            android:contentDescription="Szynszyla"
-            tools:layout_editor_absoluteX="10dp"
-            tools:layout_editor_absoluteY="321dp"
-            tools:srcCompat="@tools:sample/backgrounds/scenic" />
-    </LinearLayout>
+            android:layout_marginRight="10dp"
+            android:background="#5397DF" />
 
-</LinearLayout>
+        <androidx.cardview.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginStart="40dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginEnd="40dp"
+            android:layout_marginBottom="10dp"
+            android:elevation="10dp"
+            app:cardCornerRadius="8dp">
+
+            <ImageView
+                android:id="@+id/imageButtonChinchilla"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:adjustViewBounds="true"
+                app:srcCompat="@drawable/rodent_icon3"
+                android:contentDescription="Chinchilla" />
+        </androidx.cardview.widget.CardView>
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="5dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginRight="10dp"
+            android:background="#5397DF" />
+
+        <androidx.cardview.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginStart="40dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginEnd="40dp"
+            android:layout_marginBottom="10dp"
+            android:elevation="10dp"
+            app:cardCornerRadius="8dp">
+
+            <ImageView
+                android:id="@+id/unknown"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:adjustViewBounds="true"
+                app:srcCompat="@drawable/rodent_icon_unknown"
+                android:contentDescription="Coming soon..."/>
+        </androidx.cardview.widget.CardView>
+
+    </LinearLayout>
+</ScrollView>
