--- a/app/src/main/res/layout/treats_cagesupply.xml
+++ b/app/src/main/res/layout/treats_cagesupply.xml
@@ -28,9 +28,43 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="0dp"
             android:layout_weight="1"
-            android:orientation="horizontal">
+            android:orientation="vertical">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <View
+                    android:layout_width="8dp"
+                    android:layout_height="fill_parent"
+                    android:layout_weight="1"
+                    android:background="#0375a8" />
+
+                <com.google.android.material.tabs.TabLayout
+                    android:id="@+id/tabLayout_treats"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+
+                    android:animationCache="true"
+                    app:tabBackground="@drawable/tablayout_design"
+
+                    app:tabIconTint="@null"
+                    app:tabIndicatorColor="@color/white"
+                    app:tabIndicatorHeight="4dp"
+
+                    app:tabInlineLabel="false"
+                    app:tabSelectedTextColor="@color/white" />
+
+                <View
+                    android:layout_width="8dp"
+                    android:layout_height="fill_parent"
+                    android:layout_weight="1"
+                    android:background="#0375a8" />
+            </LinearLayout>
 
             <ScrollView
                 android:layout_width="match_parent"
@@ -40,47 +74,14 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:nestedScrollingEnabled="false"
                     android:orientation="vertical">
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:orientation="horizontal">
-
-                        <View
-                            android:layout_width="8dp"
-                            android:layout_height="match_parent"
-                            android:layout_weight="1"
-                            android:background="#0375a8" />
-
-                        <com.google.android.material.tabs.TabLayout
-                            android:id="@+id/tabLayout_treats"
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:layout_weight="1"
-
-                            android:animationCache="true"
-                            app:tabBackground="@drawable/tablayout_design"
-
-                            app:tabIconTint="@null"
-                            app:tabIndicatorColor="@color/white"
-                            app:tabIndicatorHeight="4dp"
-
-                            app:tabInlineLabel="false"
-                            app:tabSelectedTextColor="@color/white" />
-
-                        <View
-                            android:layout_width="8dp"
-                            android:layout_height="match_parent"
-                            android:layout_weight="1"
-                            android:background="#0375a8" />
-                    </LinearLayout>
 
 
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="15dp"
+                        android:background="#fce1a7"
                         android:gravity="center"
                         android:orientation="horizontal">
 
@@ -88,20 +89,20 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
+                            android:background="#fce1a7"
                             android:orientation="vertical">
 
                             <ImageView
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_marginLeft="10dp"
-                                android:layout_marginTop="10dp"
-                                android:tint="#0375a8"
-                                app:srcCompat="@drawable/ic_info" />
+                                android:layout_width="30dp"
+                                android:layout_height="30dp"
+                                android:layout_marginStart="10dp"
+                                android:layout_marginTop="3dp"
+                                app:srcCompat="@drawable/information" />
 
                             <LinearLayout
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:layout_marginBottom="10dp"
+                                android:layout_marginBottom="5dp"
                                 android:layout_weight="1"
                                 android:orientation="horizontal">
 
@@ -110,9 +111,6 @@
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:layout_marginStart="12dp"
-                                    android:layout_marginTop="2dp"
-                                    android:layout_marginRight="20dp"
-                                    android:layout_marginBottom="10dp"
                                     android:text="Info"
                                     android:textColor="#014D70"
                                     android:textSize="16sp" />
@@ -123,7 +121,8 @@
                             android:id="@+id/linearLayout_encyclopedia"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_marginRight="10dp"
+                            android:layout_marginEnd="10dp"
+                            android:background="#fce1a7"
                             android:gravity="center"
                             android:orientation="horizontal"
                             android:visibility="gone">
@@ -158,24 +157,18 @@
 
                     </LinearLayout>
 
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:orientation="horizontal">
-
-                    </LinearLayout>
 
                     <androidx.viewpager2.widget.ViewPager2
                         android:id="@+id/pager"
                         android:layout_width="match_parent"
 
                         android:layout_height="0dp"
-                        android:layout_weight="1" />
+                        android:layout_weight="1">
 
+                    </androidx.viewpager2.widget.ViewPager2>
 
 
                 </LinearLayout>
-
 
 
             </ScrollView>
