--- a/app/src/main/res/layout/treats_cagesupply.xml
+++ b/app/src/main/res/layout/treats_cagesupply.xml
@@ -5,9 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_weight="1"
-    android:orientation="vertical"
     android:background="#ACC5E1"
-    tools:context=".MainViews.ViewEncyclopedia">
+    android:orientation="vertical">
 
 
     <LinearLayout
@@ -38,7 +37,7 @@
                 android:orientation="horizontal">
 
                 <View
-                    android:layout_width="8dp"
+                    android:layout_width="10dp"
                     android:layout_height="fill_parent"
                     android:layout_weight="1"
                     android:background="#0375a8" />
@@ -60,7 +59,7 @@
                     app:tabSelectedTextColor="@color/white" />
 
                 <View
-                    android:layout_width="8dp"
+                    android:layout_width="10dp"
                     android:layout_height="fill_parent"
                     android:layout_weight="1"
                     android:background="#0375a8" />
@@ -74,7 +73,6 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:nestedScrollingEnabled="false"
                     android:orientation="vertical">
 
 
