--- a/app/src/main/res/layout/fragment_encyclopedia_tab.xml
+++ b/app/src/main/res/layout/fragment_encyclopedia_tab.xml
@@ -11,7 +11,8 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView_treats_cagesupply"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:nestedScrollingEnabled="false" />
 
 
 </RelativeLayout>
