--- a/app/src/main/res/layout/vet_map.xml
+++ b/app/src/main/res/layout/vet_map.xml
@@ -83,6 +83,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="10dp"
                 android:layout_marginTop="3dp"
+                android:layout_marginEnd="10dp"
                 android:hint="Nazwa"
                 android:maxLength="80"
                 android:maxLines="2"
@@ -96,6 +97,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="10dp"
                 android:layout_marginTop="3dp"
+                android:layout_marginEnd="10dp"
                 android:hint="Adres"
                 android:textColor="#014D70"
                 android:textSize="20sp" />
